IJPL-16028 [platform]: deprecating less useful `DirectoryIndexExcludePolicy` members
... + cleanup (quick fixes; typos; formatting)

GitOrigin-RevId: 569d0d8508848d16878873cb209c7376070ffed1