@@ -1,7 +1,6 @@
-// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2026 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.util.indexing.dependenciesCache;
 
-import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.projectRoots.Sdk;
@@ -11,39 +10,35 @@ import com.intellij.openapi.roots.impl.DirectoryIndexExcludePolicy;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.openapi.vfs.VirtualFileManager;
 import com.intellij.util.ArrayUtil;
-import com.intellij.util.Function;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 
 final class ExcludePolicyDescriptor {
-  private final @NotNull Class<? extends DirectoryIndexExcludePolicy> policyClass;
+  private final Class<? extends DirectoryIndexExcludePolicy> policyClass;
   private final String[] excludedRootUrls;
-  final @NotNull Set<VirtualFile> excludedFromSdkRoots;
+  final Set<VirtualFile> excludedFromSdkRoots;
 
-  private static @NotNull ExcludePolicyDescriptor create(@NotNull DirectoryIndexExcludePolicy policy,
-                                                         @NotNull Set<? extends Sdk> sdks,
-                                                         @NotNull Set<? extends VirtualFile> sdkRoots) {
-    String[] excludedRootUrls = policy.getExcludeUrlsForProject();
+  private static ExcludePolicyDescriptor create(DirectoryIndexExcludePolicy policy, Set<Sdk> sdks, Set<VirtualFile> sdkRoots) {
+    var excludedRootUrls = policy.getExcludeUrlsForProject();
     if (excludedRootUrls.length == 0) excludedRootUrls = ArrayUtil.EMPTY_STRING_ARRAY;
-    Function<Sdk, List<VirtualFile>> strategy = policy.getExcludeSdkRootsStrategy();
+    @SuppressWarnings("removal")
+    var strategy = policy.getExcludeSdkRootsStrategy();
     Set<VirtualFile> excludedFromSdkRoots;
     if (strategy == null) {
-      excludedFromSdkRoots = Collections.emptySet();
+      excludedFromSdkRoots = Set.of();
     }
     else {
-      Collection<VirtualFile> excludedFromSdk = new ArrayList<>();
-      for (Sdk sdk : sdks) {
-        List<VirtualFile> excluded = strategy.fun(sdk);
-        for (VirtualFile file : excluded) {
+      var excludedFromSdk = new ArrayList<VirtualFile>();
+      for (var sdk : sdks) {
+        var excluded = strategy.fun(sdk);
+        for (var file : excluded) {
           if (!sdkRoots.contains(file)) {
             excludedFromSdk.add(file);
           }
@@ -54,9 +49,11 @@ final class ExcludePolicyDescriptor {
     return new ExcludePolicyDescriptor(policy.getClass(), excludedRootUrls, excludedFromSdkRoots);
   }
 
-  private ExcludePolicyDescriptor(@NotNull Class<? extends DirectoryIndexExcludePolicy> policyClass,
-                                  String[] excludedRootUrls,
-                                  @NotNull Set<VirtualFile> excludedFromSdkRoots) {
+  private ExcludePolicyDescriptor(
+    Class<? extends DirectoryIndexExcludePolicy> policyClass,
+    String[] excludedRootUrls,
+    Set<VirtualFile> excludedFromSdkRoots
+  ) {
     this.policyClass = policyClass;
     this.excludedRootUrls = excludedRootUrls;
     this.excludedFromSdkRoots = excludedFromSdkRoots;
@@ -70,15 +67,17 @@ final class ExcludePolicyDescriptor {
   public boolean equals(Object o) {
     if (this == o) return true;
     if (o == null || getClass() != o.getClass()) return false;
-    ExcludePolicyDescriptor that = (ExcludePolicyDescriptor)o;
-    return policyClass.equals(that.policyClass) &&
-           Arrays.equals(excludedRootUrls, that.excludedRootUrls) &&
-           excludedFromSdkRoots.equals(that.excludedFromSdkRoots);
+    var that = (ExcludePolicyDescriptor)o;
+    return (
+      policyClass.equals(that.policyClass) &&
+      Arrays.equals(excludedRootUrls, that.excludedRootUrls) &&
+      excludedFromSdkRoots.equals(that.excludedFromSdkRoots)
+    );
   }
 
   @Override
   public int hashCode() {
-    int result = Objects.hash(policyClass, excludedFromSdkRoots);
+    var result = Objects.hash(policyClass, excludedFromSdkRoots);
     result = 31 * result + Arrays.hashCode(excludedRootUrls);
     return result;
   }
@@ -86,31 +85,31 @@ final class ExcludePolicyDescriptor {
   @Override
   public String toString() {
     if (excludedRootUrls.length == 0 && excludedFromSdkRoots.isEmpty()) {
-      return "ExcludePolicyDescriptor{" +
-             "policyClass=" + policyClass.getSimpleName() +
-             "; empty}";
+      return "ExcludePolicyDescriptor{policyClass=" + policyClass.getSimpleName() + "; empty}";
     }
-    return "ExcludePolicyDescriptor{" +
-           "policyClass=" + policyClass.getSimpleName() +
-           ", excludedRootUrls=" + Arrays.toString(excludedRootUrls) +
-           ", excludedFromSdkRoots=" + excludedFromSdkRoots +
-           '}';
+    else {
+      return (
+        "ExcludePolicyDescriptor{policyClass=" + policyClass.getSimpleName() +
+        ", excludedRootUrls=" + Arrays.toString(excludedRootUrls) +
+        ", excludedFromSdkRoots=" + excludedFromSdkRoots + '}'
+      );
+    }
   }
 
   static @NotNull List<ExcludePolicyDescriptor> collectDescriptors(@NotNull Project project) {
-    Set<Sdk> sdks = new HashSet<>();
-    for (Module module : ModuleManager.getInstance(project).getModules()) {
-      Sdk sdk = ModuleRootManager.getInstance(module).getSdk();
+    var sdks = new HashSet<Sdk>();
+    for (var module : ModuleManager.getInstance(project).getModules()) {
+      var sdk = ModuleRootManager.getInstance(module).getSdk();
       if (sdk != null) {
         sdks.add(sdk);
       }
     }
-    Set<VirtualFile> roots = new HashSet<>();
-    for (Sdk sdk : sdks) {
+    var roots = new HashSet<VirtualFile>();
+    for (var sdk : sdks) {
       roots.addAll(Arrays.asList(sdk.getRootProvider().getFiles(OrderRootType.CLASSES)));
     }
-    List<ExcludePolicyDescriptor> excludePolicies = new ArrayList<>();
-    for (DirectoryIndexExcludePolicy policy : DirectoryIndexExcludePolicy.EP_NAME.getExtensions(project)) {
+    var excludePolicies = new ArrayList<ExcludePolicyDescriptor>();
+    for (var policy : DirectoryIndexExcludePolicy.EP_NAME.getExtensions(project)) {
       excludePolicies.add(create(policy, sdks, roots));
     }
     return excludePolicies;
